hphp/hack/test/typecheck/idx3_2.php.like_types.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_2.php", line 7, characters 15-20:
Expected string
File "idx3_2.php", line 3, characters 27-29:
But got int
